[gd_scene load_steps=8 format=2]

[ext_resource path="res://code/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://code/eyes.gd" type="Script" id=3]
[ext_resource path="res://code/gun_c.gd" type="Script" id=4]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="Animation" id=3]
resource_name = "recoil"
length = 0.04
loop = true
step = 0.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
ray_path = NodePath("head/Camera/eyes")

[node name="head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01225, -0.850917 )

[node name="Camera" type="Camera" parent="head"]
cull_mask = 1048573
near = 0.01

[node name="eyes" type="RayCast" parent="head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.000914931, 0.850917 )
enabled = true
cast_to = Vector3( 0, 0, -10 )
collide_with_areas = true
script = ExtResource( 3 )

[node name="hand" parent="head" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.257, -0.217, -0.074 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../CollisionShape")
material/0 = null

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="gun_c" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01372, -0.853574 )
cull_mask = 2
near = 0.01
script = ExtResource( 4 )
camera_path = NodePath("../../../head/Camera")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/recoil = SubResource( 3 )

[connection signal="gun_pick_confirmed" from="." to="head/Camera/eyes" method="_on_Player_gun_pick_confirmed"]
[connection signal="enter" from="head/Camera/eyes" to="." method="_on_eyes_enter"]
[connection signal="pick" from="head/Camera/eyes" to="." method="_on_eyes_pick"]
